--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <body>
         <img src="clane1.jpg" alt="" width="100%">
         <div class="palagraph1">
-            <h2>動画コンテンツ</h2>
+            <h2>お問い合わせ</h2>
             <p>
                 Coming Soon...
             </p>
