--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
-        <title>動画コンテンツ | ◆Oream◇</title>
+        <title>お問い合わせ | ◆Oream◇</title>
     </head>
     <script>
     window.onload = function() {
