--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <a href="https://oream.github.io/2021Fes-members/">　会員紹介</a>
                 </li><!-- /.drawer-item -->
                 <li class="drawer-item">
-                    <a href="https://oream.github.io/2021Fes-contact">　お問い合わせ</a>
+                    <a href="https://oream.github.io/2021Fes-contact">　ご意見・ご要望</a>
                 </li>
             </ul><!-- /.drawer-list -->
         </nav>
@@ -61,9 +61,10 @@
         <body>
         <img src="clane1.jpg" alt="" width="100%">
         <div class="palagraph1">
-            <h2>お問い合わせ</h2>
+            <h2>ご意見・ご要望</h2>
             <p>
-                Coming Soon...
+                下記フォームより、ご意見・ご要望・ご感想をお寄せください。<br>
+                なお、頂いた回答に対する返信はできませんので、ご了承ください。
             </p>
         </div>
     </body>
