--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 下記フォームより、ご意見・ご要望・ご感想をお寄せください。<br>
                 なお、頂いた回答に対する返信はできませんので、ご了承ください。
             </p>
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSePzb8EjQMKh9gBuBamztLywL4amqGeicd6z5mEV-Qpy9GXHQ/viewform?embedded=true" width="640" height="1228" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSePzb8EjQMKh9gBuBamztLywL4amqGeicd6z5mEV-Qpy9GXHQ/viewform?embedded=true" width="75%" height="1228" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
         </div>
     </body>
     <footer>
