--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
             <h2>ご意見・ご要望</h2>
             <p>
                 下記フォームより、ご意見・ご要望・ご感想をお寄せください。<br>
-                なお、頂いた回答に対する返信はできませんので、ご了承ください。
+                なお、頂いた回答に対する返信はできませんので、ご了承ください。<br>
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSePzb8EjQMKh9gBuBamztLywL4amqGeicd6z5mEV-Qpy9GXHQ/viewform?embedded=true" width="600" height="1228" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
             </p>
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSePzb8EjQMKh9gBuBamztLywL4amqGeicd6z5mEV-Qpy9GXHQ/viewform?embedded=true" width="75%" height="1228" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
         </div>
     </body>
     <footer>
